# Cognitive-Automotive-Lab

./: README.md
anicar_lateral_control_ros_tool/: CMakeLists.txt  nodelet_plugins.xml  package.xml
anicar_longitudinal_control_ros_tool/: CMakeLists.txt  package.xml
direction_sign_detector/: CMakeLists.txt  package.xml
grid_map_creation/: grid_map_creation.cpp
longitudinal_controller/: longitudinal_controller.cpp  longitudinal_controller.hpp  longitudinal_controller_node.cpp  longitudinal_controller_nodelet.cpp
neverdrive_grid_map_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
neverdrive_obstacle_detection_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
neverdrive_obstacle_detection_ros_tool/.metadata/: version.ini
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: segments_1
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
neverdrive_obstacle_detection_ros_tool/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
neverdrive_obstacle_detection_ros_tool/cfg/: ObstacleDetection.rosif
neverdrive_obstacle_detection_ros_tool/launch/: obstacle_detection.launch  obstacle_detection_node.launch  obstacle_detection_nodelet.launch
neverdrive_obstacle_detection_ros_tool/launch/params/: obstacle_detection_parameters.yaml
neverdrive_obstacle_detection_ros_tool/msg/: Box.msg
neverdrive_obstacle_detection_ros_tool/res/: visualization.rviz
neverdrive_obstacle_detection_ros_tool/src/obstacle_detection/: obstacle_detection.hpp  obstacle_detection_node.cpp  obstacle_detection_nodelet.cpp
neverdrive_obstacle_detection_ros_tool/test/: obstacle_detection_node.cpp  obstacle_detection_node.test  obstacle_detection_nodelet.cpp  obstacle_detection_nodelet.test
(+65 files in other folders)
