<package format="2">
  <name>neverdrive_obstacle_detection_ros_tool</name>
  <version>0.0.0</version>
  <description>pkg that detects the obstacles</description>

  <license>BSD</license>
  <maintainer email="kal4-1@mrt.kit.edu">xing meng</maintainer>
  <author email="kal4-1@mrt.kit.edu">xing meng</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/kal4-1/neverdrive_obstacle_detection_ros_tool</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>rosinterface_handler</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <depend>rospy</depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>mrt_opencv</depend>
  <depend>cv_bridge</depend>
  <depend>image_preproc</depend>
  <depend>image_preproc_ros_tool</depend>
  <depend>image_transport</depend>
  <depend>utils_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>mrt_image_geometry_ros</depend>
 <depend>std_msgs</depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <depend>dynamic_reconfigure</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" /><!-- Other tools can request additional information be placed here -->
  </export>
</package>
